# 3DFace-Reconstruction

./: .gitignore  CMakeLists.txt  README.md  emma.txt  h5_to_bin.sh  load_binary.cpp  requirements.txt  show_landmark.py
include/: BFMManager.h  Optimizer.h  Regularization.h  Renderer.h
landmarks/: micheal_landmarks.txt  wolverine_landmarks.txt
src/: BFMManager.cpp  FreeImageHelper.cpp  Optimizer.cpp  Renderer.cpp
